2007-02-05  Jakub Jelinek  <jakub@redhat.com>

	[BZ #3957]
	* posix/regcomp.c (parse_bracket_exp): Set '\n' bit rather than '\0'
	bit for RE_HAT_LISTS_NOT_NEWLINE.
	(build_charclass_op): Remove bogus comment.
	* posix/Makefile (tests): Add bug-regex27 and bug-regex28.
	* posix/bug-regex27.c: New test.
	* posix/bug-regex28.c: New test.

2007-02-02  Bruno Haible  <bruno@clisp.org>

	[BZ #3954]
	* iconvdata/ksc5601.c (__ksc5601_sym_to_ucs, __ksc5601_sym_from_ucs):
	Add mapping for U+327E.
	* iconvdata/ksc5601.h (KSC5601_SYMBOL): Increment.
	* iconvdata/johab.c (BODY for FROM_LOOP, BODY for TO_LOOP): Enable
	mapping of 0xD9 0xE8.
	* iconvdata/uhc.c (BODY for FROM_LOOP, BODY for TO_LOOP): Disable
	mapping of U+327E.
	Reported by Jungshik Shin <jungshik@google.com>.

	[BZ #3955]
	* iconvdata/johab.c (BODY for FROM_LOOP, BODY for TO_LOOP): Enable
	mapping of 0xD9 0xE6 and of 0xD9 0xE7.
	Reported by Jungshik Shin <jungshik@google.com>.

2007-01-31  Jakub Jelinek  <jakub@redhat.com>

	* nscd/nscd-client.h (__nscd_cache_search): Remove const qualifier
	from return value.
	* nscd/nscd_helper.c: Include string.h.
	(__nscd_cache_search): Remove const qualifier from return value.
	On strict alignment architectures check hash entry and data head
	alignment.
	* nscd/nscd_getpw_r.c (nscd_getpw_r): Don't crash or fail because
	mmapped data during GC cycle contains garbage.  If
	__nscd_drop_map_ref fails, decrement mapped->counter when returning
	error or if retrying with NO_MAPPING, only __nscd_unmap if counter
	dropped to 0.
	* nscd/nscd_getgr_r.c (nscd_getgr_r): Likewise.
	* nscd/nscd_initgroups.c (__nscd_getgrouplist): Likewise.
	* nscd/nscd_gethst_r.c (nscd_gethst_r): Likewise.
	* nscd/nscd_getai.c (__nscd_getai): Likewise.

2007-01-22  Ulrich Drepper  <drepper@redhat.com>

	[BZ #3902]
	* stdio-common/_itoa.c (_itoa): Make sure at least a zero is emitted.
	* stdio-common/Makefile (tests): Add bug17.
	* stdio-common/bug17.c: New file.
